[package]
name = "polkadot-parachain"
version = "0.9.220"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2021"
description = "Runs a polkadot parachain node which could be a collator."

[dependencies]
async-trait = "0.1.56"
clap = { version = "3.2.6", features = ["derive", "deprecated"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.21"
hex-literal = "0.3.4"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }

# Local
rococo-parachain-runtime = { path = "../parachains/runtimes/testing/rococo-parachain" }
shell-runtime = { path = "../parachains/runtimes/starters/shell" }
seedling-runtime = { path = "../parachains/runtimes/starters/seedling" }
statemint-runtime = { path = "../parachains/runtimes/assets/statemint" }
statemine-runtime = { path = "../parachains/runtimes/assets/statemine" }
westmint-runtime = { path = "../parachains/runtimes/assets/westmint" }
contracts-rococo-runtime = { path = "../parachains/runtimes/contracts/contracts-rococo" }
jsonrpsee = { version = "0.14.0", features = ["server"] }
parachains-common = { path = "../parachains/common" }

# Substrate
frame-benchmarking = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
frame-benchmarking-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-io = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-inherents = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-consensus = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-session = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-consensus = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-executor = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", features = ["wasmtime"] }
sc-service = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-transaction-pool = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-transaction-pool = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-network = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-basic-authorship = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-timestamp = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-blockchain = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-block-builder = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-keystore = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-chain-spec = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-rpc = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-tracing = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-offchain = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-consensus-aura = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-sysinfo = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
substrate-prometheus-endpoint = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
try-runtime-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-transaction-pool-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
pallet-transaction-payment-rpc = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
pallet-contracts-rpc = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

# Polkadot
polkadot-cli = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-parachain = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-primitives = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-service = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
xcm = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }

# Cumulus
cumulus-client-cli = { path = "../client/cli" }
cumulus-client-consensus-aura = { path = "../client/consensus/aura" }
cumulus-client-consensus-relay-chain = { path = "../client/consensus/relay-chain" }
cumulus-client-consensus-common = { path = "../client/consensus/common" }
cumulus-client-service = { path = "../client/service" }
cumulus-client-network = { path = "../client/network" }
cumulus-primitives-core = { path = "../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../primitives/parachain-inherent" }
cumulus-relay-chain-interface = { path = "../client/relay-chain-interface" }
cumulus-relay-chain-inprocess-interface = { path = "../client/relay-chain-inprocess-interface" }
cumulus-relay-chain-rpc-interface = { path = "../client/relay-chain-rpc-interface" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

[dev-dependencies]
assert_cmd = "2.0"
nix = "0.24"
tempfile = "3.3.0"

[features]
default = []
runtime-benchmarks = [
	"polkadot-service/runtime-benchmarks",
	"statemint-runtime/runtime-benchmarks",
	"statemine-runtime/runtime-benchmarks",
	"westmint-runtime/runtime-benchmarks",
]
try-runtime = [
	"statemint-runtime/try-runtime",
	"statemine-runtime/try-runtime",
	"westmint-runtime/try-runtime",
	"shell-runtime/try-runtime",
]
