[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
codec = { package = "parity-scale-codec", version = "3.0.0", features = [ "derive" ] }
derive_more = "0.99.2"
futures = "0.3.21"
futures-timer = "3.0.2"
parking_lot = "0.12.1"
tracing = "0.1.34"

# Substrate
sc-client-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-blockchain = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-consensus = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-state-machine = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

# Polkadot
polkadot-node-primitives = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-parachain = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-primitives = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }

# Cumulus
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

[dev-dependencies]
portpicker = "0.1.1"
tokio = { version = "1.19.2", features = ["macros"] }
url = "2.2.2"

# Substrate
sc-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-client-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-consensus = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-keyring = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-keystore = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
substrate-test-utils = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

# Polkadot
polkadot-client = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-service = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-test-client = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }

# Cumulus
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-inprocess-interface = { path = "../relay-chain-inprocess-interface" }
cumulus-test-service = { path = "../../test/service" }
