[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-inprocess-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
futures = "0.3.21"
futures-timer = "3.0.2"
parking_lot = "0.12.1"
tracing = "0.1.34"

# Substrate
sc-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-client-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-consensus-babe = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-network = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-telemetry = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-tracing = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-sysinfo = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-blockchain = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-consensus = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-state-machine = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

# Polkadot
polkadot-cli = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-client = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-service = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }

# Cumulus
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

[dev-dependencies]

# Substrate
sp-keyring = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

# Polkadot
polkadot-primitives = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }
polkadot-test-client = { git = "https://github.com/zeitgeistpm/polkadot", branch = "release-v0.9.26-libp2p" }

# Cumulus
cumulus-test-service = { path = "../../test/service" }
