[package]
name = "parachains-common"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Logic which is common to all parachain runtimes"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate
frame-executive = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
frame-support = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
frame-system = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
pallet-assets = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
pallet-authorship = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
pallet-balances = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
sp-consensus-aura = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
sp-io = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }
sp-std = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", default-features = false }

# Polkadot
polkadot-primitives = { git = "https://github.com/zeitgeistpm/polkadot", default-features = false, branch = "release-v0.9.26-libp2p" }
polkadot-runtime-common = { git = "https://github.com/zeitgeistpm/polkadot", default-features = false, branch = "release-v0.9.26-libp2p" }
xcm = { git = "https://github.com/zeitgeistpm/polkadot", default-features = false, branch = "release-v0.9.26-libp2p" }
xcm-executor = { git = "https://github.com/zeitgeistpm/polkadot", default-features = false, branch = "release-v0.9.26-libp2p" }

# Cumulus
pallet-collator-selection = { path = "../../pallets/collator-selection", default-features = false }

[dev-dependencies]
pallet-authorship = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-io = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-asset-tx-payment/std",
	"pallet-assets/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"polkadot-primitives/std",
	"polkadot-runtime-common/std",
	"sp-consensus-aura/std",
	"sp-io/std",
	"sp-std/std",
	"pallet-collator-selection/std",
]
