[package]
name = "cumulus-test-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }

# Substrate
frame-executive = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
frame-support = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
frame-system = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
frame-system-rpc-runtime-api = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
pallet-balances = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
pallet-sudo = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
pallet-timestamp = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
pallet-transaction-payment = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-api = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-block-builder = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-inherents = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-io = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-offchain = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-session = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-std = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-transaction-pool = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }
sp-version = { git = "https://github.com/zeitgeistpm/substrate", default-features = false, branch = "polkadot-v0.9.26-libp2p" }

# Cumulus
cumulus-pallet-parachain-system = { path = "../../pallets/parachain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
]
increment-spec-version = []
